[project]
name = "gleif"
version = "0.1.0"
description = "GLEIF Golden Copy data loader and LEI relationship query CLI"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Byron Williams", email = "byronawilliams@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
gleif = "gleif.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gleif"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "COM",
    "C4", "ISC", "ICN", "PIE", "PT", "RSE", "RET",
    "SLF", "SIM", "TID", "ARG", "PGH", "PL", "TRY",
    "FLY", "PERF", "RUF", "BLE", "EM", "FA", "G",
    "T10", "C901",
]
ignore = [
    "COM812",   # trailing comma (conflicts with formatter)
    "ISC001",   # implicit string concat (conflicts with formatter)
    "TRY003",   # long exception messages
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "SLF001"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=gleif --cov-report=term-missing"

[tool.bandit]
exclude_dirs = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.7.0",
    "basedpyright>=1.20",
    "pre-commit>=3.6",
    "bandit[toml]>=1.7",
]
