[project]
name = "gleif"
version = "0.1.0"
description = "GLEIF Golden Copy data loader and LEI relationship query CLI"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Byron Williams", email = "byronawilliams@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/ByronWilliamsCPA/gleif"
Changelog = "https://github.com/ByronWilliamsCPA/gleif/blob/main/CHANGELOG.md"

[project.scripts]
gleif = "gleif.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gleif"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "COM",
    "C4", "ISC", "ICN", "PIE", "PT", "RSE", "RET",
    "SLF", "SIM", "TID", "ARG", "PGH", "PL", "TRY",
    "FLY", "PERF", "RUF", "BLE", "EM", "FA", "G",
    "T10", "C901",
    "ANN", "DTZ", "FBT", "FURB", "INP", "LOG", "PYI",
    "Q", "S", "T20", "TCH", "YTT", "ASYNC",
]
ignore = [
    "COM812",   # trailing comma (conflicts with formatter)
    "ISC001",   # implicit string concat (conflicts with formatter)
    "TRY003",   # long exception messages
    "ANN401",   # dynamically typed expressions (Any)
    "S101",     # use of assert (fine in tests)
    "FBT001",   # boolean positional arg (common in CLI tools)
    "FBT002",   # boolean default arg (common in CLI tools)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "SLF001"]
"src/gleif/db.py" = ["S608"]      # f-strings only used for read_csv() file paths, not user input
"src/gleif/queries.py" = ["S608"] # parameterized queries ($1/$2) used for all user-supplied values

[tool.ruff.lint.pylint]
max-args = 6

[tool.basedpyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=gleif --cov-report=term-missing"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B608"]  # read_csv() paths and column constants are app-controlled, not user input

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 65  # interim: raise to 80 once download.py and CLI command tests are added

[tool.darglint]
docstring_style = "google"
strictness = "short"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 80
verbose = 0
quiet = false
whitelist-regex = []
color = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.7.0",
    "basedpyright>=1.20",
    "pre-commit>=3.6",
    "pip-audit>=2.7",
    "bandit[toml]>=1.7",
    "mkdocs-material>=9.5",
]
